ajustadas rotas categories para serem usadas do lado do cliente
